      (with this fix QSUBHOST from torque.cfg will no longer work. Do we need to make it
       to override the host name?)
  b - fix so user epilogues are run as user instead of root (backported from 3.0.3)
  b - fix the prevent pbs_server from hanging when doing server to server job moves.
      (backported from 3.0.3)

2.5.8
  b - fix for bugzilla #141 - qsub was overwriting the path variable in PBSD_authenticate
      (backported from 3.0.3)
  b - Reversed the order of $(MOMLIBS) and $(PBS_LIBS) in src/resmom/Makefile.in for 
      LDADD = @PBS_MACH@/libmommach.a $(PBS_LIBS) $(MOMLIBS). This fixes a link 
      problem on Suse Linux. This fixes bugzilla bug 143.
  e - automatically create and mount /dev/cpuset when TORQUE is configured but the cpuset
      directory isn't there (backported from 3.0.3)
  b - clear out exec_gpus as needed
  b - fix for bugzilla #147 - recreate $PBS_NODESFILE file when restarting a blcr
      checkpointed job (backported from 3.0.3)
  b - Fixed kill_job so it will only run epilogue.precancel when a job is canceled
      and not on normal job exit.
  b - Applied patch submitted by Eric Roman for resmom/Makefile.am (Bugzilla #147)
      (backported from 3.0.3)
  b - Fix for adding -lcr for BLCR makefiles (Bugzilla #146 backported from 3.0.3)
  e - Modified pbs_disconnect so it no longer does a read to wait for the server
      side to disconnect first. Also modified write_nonblocking_socket to ensure 
      socket is non-blocking and exit if stuck on EAGAIN return from write.
  e - added util function getpwnam_ext() that has retry and errno logging
      capability for calls to getpwnam().
  c - fix a potential segfault when using asynchronous runjob with an array slot limit
      (backported from 3.0.3)
  b - In pbs_original_connect() only the first NCONNECT entries of the connection table 
      were checked for availability. NCONNECT is defined as 10. However, the connection